Corrected URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title                    : "Sagar Bharadwaj"
 title_separator          : "-"
 name                     : &name "Sagar Bharadwaj"
 description              : &description "PhD Student, Carnegie Mellon University"
-url                      : "https://sagarb-97.github.io/new-personal-website/" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : "https://sagarb-97.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+baseurl                  : "/new-personal-website" # the subpath of your site, e.g. "/blog"
 repository               : "sagarb-97/sagarb-97.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
