--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Sagar Bharadwaj"
 description              : &description "PhD Student, Carnegie Mellon University"
 url                      : "https://sagarb-97.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "/new-personal-website" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sagarb-97/sagarb-97.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
