Add misc page and llm blog

--- a/_config.yml
+++ b/_config.yml
@@ -227,6 +227,9 @@ collections:
   experience:
     output: true
     permalink: /:collection/:path/
+  misc:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
